@@ -15,20 +15,20 @@ AUX gitlab-workhorse.service 930 SHA256 09348a52fec333b4b19828752e0484400c1efa9d
 AUX gitlab.conf 27 SHA256 cd9be088bbb67a5400407fc6f63c061eb224f16748b7d0812ff2c101f43ca263 SHA512 909c49fee6d050c1e94b2559ff2a9d54c5c346492be0e2920b50d56d69eaddbed67e3ac12e012d2a9601b5596640ebf33c8dc68fc588a03ca370d963294be37f WHIRLPOOL fa436e8d7d2643d450259d26b6e7b24dae69df47ed22e5ef2a567f37aa785fbf3b0eb1129ae7c8bf8986c29559fc3b744a34064375e5245dce2b10053cd715d9
 DIST gitlab-ce-8.13.6.tar.gz 27816283 SHA256 48f29ab3c33123898502563c764fbbfcc3a3146bccc6793f7129656360f277a5 SHA512 b2928b22431eb974b679b464d0a7ec85d9325b584371f884b174678943a17f8ac8db34a3e1992f0f8cbc4cbf4d3000344aa7513edc2c683fb3a8940375a5ea5f WHIRLPOOL f5c7ea34fa4b659d7c0405983b3fc797c4c7641daf027f9f3d06b6d5b3f9bb9435f200456cace9813584ad6256d6d389fbbd08b7f28a9c29aacdabb5b7dc0c2e
 DIST gitlab-ce-8.14.0.tar.gz 29710909 SHA256 817f4d5dbb5a59d204f71954d0549f99b91746563d190f73346427a0130051e8 SHA512 4428fd6cecadd613dee705107a69bdbc87db0a80a85b431b26575c6e00ad6802d5240bb3c4a7b67b75f7dcb6926a230a845f329004ae8c60d484dd96cb79ef1f WHIRLPOOL 7aaf718229ebb99f42a4f1462cdc5da4de1f23d90e28fee20f25d93e3f8959e21c5275d4116bba16ed41450609ea1d28dcf5c150c80313a5776ed00b47bee7fc
-DIST gitlab-ce-8.14.0_rc4.tar.gz 30101713 SHA256 667cccc428d20d241a19bb554eb517673e447db85d163f8245f1d9969e233a4d SHA512 4389aa9139836ec2ab70036df1f1f4324e57edc3fd13c331179e3774c2f65f253c66eaae7699ab427248ef05d2b128ddfe425b59596f1e6070e1b2278a883c37 WHIRLPOOL 1fd35f86555f45003621dda41cb1a31892dac9b02982fc04873c65ba5f7b1960b75c4b4d6ac7fe0d13b5c11e516d997504f9184449fa48ab272e696579154529
 DIST gitlab-ce-8.14.1.tar.gz 29715000 SHA256 81c5b9019fba31546ce414424a567a999783be0d5ab0ae865c5576073e864bae SHA512 780040ea9764dbadddcd9c8cbbb743e4b101d5da3fdbd792b6da3dced26179884bb348323c75888040b45231f091605246ccaa6af17f79e2aefb0931bbf32a47 WHIRLPOOL dd23ae35a67f1cdca76f671b96ab6dd8f5b7782e3e43da0e63872a0842098da8e2dbcf6515a8c43a1f1fdb0949a8ce19d31148b50b198fb4054f32285f914690
 DIST gitlab-ce-8.14.2.tar.gz 29715506 SHA256 9d45a0a86c6b01e0c48e7fe2fc442fe774f062b8b149f1d697c38aa29f6c3a25 SHA512 f65d12eafc397c5146264615ae384721165bd11498adf02f34c3fa65e55ac0b20d16d14d78455d46454c14bd0f075dedd627d5940853bfb99143c52d4d8c4194 WHIRLPOOL 44a9daf2dc4aea80e84a44fe45d085600ef463b5346417f36c4fd550749bba4599e328f43485317dadbbdab2fca6fef56c91cc41ea6156eeb797671e7416bc7f
 DIST gitlab-ce-8.14.3.tar.gz 29717697 SHA256 df0b57646af534a874128d6e1903cee215c093a3c6302315cc53a9bddf62582e SHA512 9c7c58d0c6c7df447b0f723c550cb95530e781cf75b915b49e098dc0742cc18dc47e665cfa228dc2867ac5cc4dc40d62b6544d0160738a596d2331628c80304c WHIRLPOOL d96e9cbcbee48ce5f6ceff88756ad7493c0b5a3111ff072996541e5b650f0feb727eceab5e0859873b68d6248d790c4dacb8bc9e2d1f288936fc102de1410052
 DIST gitlab-ce-8.14.4.tar.gz 29719940 SHA256 32c8e66e3c5f820874548c0ceab0215a567ca7b58a9ea604adc63878f50f8307 SHA512 426faaa4a4f18e9462d2153f031db8394465581638d259e6e0282a2bfe6c72c8738ca0dc084969f414e61a362bc5792656a07b33592a7f880307613fc152f8ae WHIRLPOOL f3f3a012f26a5a3dcdc5214b039128280e75ddf885b71fdacec13119cc6229dd771db0186b8fb04c5f761e62cf5962867570c6c4bfd47eecca57f1665521b220
 DIST gitlab-ce-8.14.5.tar.gz 29722006 SHA256 8e03214c1f741cf813453e7764a0da1d8f0ec957b5395d2e359b9f24bb5f3c8e SHA512 afdc8bcd3022f1b1e5f14c76a5ee696eda462ffeeba94411f3f82ba0b2e0647d017982f0357fe66a1272929569eb0f24e5d18bfda78b88599e91c9486438aaa9 WHIRLPOOL 1eba1abf2543bb8203349fe03e6debf5e837effcf7a23d1f4e7e49900db7d1bc77c62ca6f95c5b26b7c00c396499f3cc8c2ec2d0e5f209bc2d7da99d2f7a4668
+DIST gitlab-ce-8.15.0_rc1.tar.gz 17803212 SHA256 6981763818f2dd1f46d5d8f0c708b7d8d0b780a2bb68852270fc9e6c649bd12c SHA512 24689f4976b7b423359ca36de5e84b82e50f6b1f6b1886437bda4bef2bfd2efd9348fdd5c90b726215cfe9243711f121f61d2bf485c67915a52fdb43524d531b WHIRLPOOL 349a6cafff690aa104cd12d2ad146b83ba2b146c79f8fa10ac48a4a4863b78db8218d0aa5e970f6a22f30c6eeaf25d076d25158c66302e7b76d048980994c278
 EBUILD gitlab-ce-8.13.6.ebuild 11979 SHA256 761411082e2e68f432f913f5c5c969847832d335b1f7843575890ba125542539 SHA512 ab01af577da7a27cee3308c6766a042edbce7f1c472639b9a24b9bef3a7ce37389dd8e32b43cf62b9ce7c20399ccf17fd35f678ea63598b4b06890bfeabded50 WHIRLPOOL cc14b981521f0513108ab4320f2e3d4f210ec0da7373f0f99b35d975003b5e1ff5783c5db5c6b7f29739e795fc73d4744716f81056039eefaf445354bd7cb000
 EBUILD gitlab-ce-8.14.0.ebuild 12058 SHA256 ef9893f42bf74b6864d5647c406afb69412cfa88ab89fa3bbc8a69d92f6eabe9 SHA512 182be258e2ede41a056d0ecc6c8691dc89af035474b711c74887b61105e1260fd0cc02556931e713cc256766a8879356ea07ce7bb9aa8f463eedf63925afe52e WHIRLPOOL 69c12e67507d5f27bf5491d06a1f0de7e0bc156b624008977f7150b623728e255ebdcecb100aa3133dc8063f7bdfb5586c0924fa3077c1141090719666d1cb76
-EBUILD gitlab-ce-8.14.0_rc4.ebuild 11956 SHA256 d6e509c5e9de4c361f04a8c76d0e87b947c5416bc6222e716d368cd82cd55df3 SHA512 58d8862ccb1d09b05bc880fa36d6d3936d1d666537da395817e794b7410fba0df1afc136a6e2bebd6d29b2bf16ef8cd95ac3130e6f35b678c543f7e0e552810a WHIRLPOOL a348a04316fa46da98816ea6a51b641aae68b13b513cfd445b002d2a6180786cf0fd5fdfcf0420ceec8de7a090b01f4009334fe5618c47813b40f0baed8360da
 EBUILD gitlab-ce-8.14.1.ebuild 12058 SHA256 95df987cfcc654adfff434916f3b3c093bd363f147ce732f2712923c38c6cea1 SHA512 7aac8dd78a3d25eb6a3664f7818188d89dea015cfb88f37c5d54597b9e0351f208d82a96488ec0109769d59b264d0a81f4656e3e95b63fe1ac99290879f28497 WHIRLPOOL 683ca7f8b32b89ebc3f503481ef6891dea756297f4a474efb62791f5b0bfd3e5287498bc0f78b73592b1c1cc8ce7ec67748a439399c601992f300dfcbe190560
 EBUILD gitlab-ce-8.14.2.ebuild 12058 SHA256 d3ceac76fde85644bae8524b94e29c484a125aa3bb5e55cd4ffe0d738e0e2e90 SHA512 c47d3a69ba675a8f6637a229b1fc65a4c0c6c00c6532ecc06d32f332129cfea8b89c6267bf9110e449c3fe20487be8a0d627fac06f19ab2824e8b161598e8e6e WHIRLPOOL 4a394a334e1ba27d6438cf351b54d83324210b39d0d6d3707828fd48413e2258314b80507136bc09764568c479814d5b1b6cf30b40b64a80b29a3506c256f4da
 EBUILD gitlab-ce-8.14.3.ebuild 12058 SHA256 c495099e43d677041f197e70c051ba2e5541b600d8e65a9bfc17de44bd46195a SHA512 bf50743972034453cb3d63563589e768ef2c394e6a119b34ca55b17ff03d34f98d85a09e3411090bee4a821f505a35ac9ea1c89c6fdd241c395b71c8daf671a4 WHIRLPOOL cedad6cb34a050bc052c3827a3f6e95cb5e68346fa3da2a77e7cceabe0b194abc545a5ffef6441e00f55be0d4a701dcab63a0b0907cb81529fd20d34403fb066
 EBUILD gitlab-ce-8.14.4.ebuild 12058 SHA256 8f856b037e7f6b299e24725dcc972bd83a0758f7f4d79972eb446a931c240614 SHA512 30c304448c208e20da70dbb4300150aa494a2d4b00e2bf3db6897b1b3c13834ece0a186f29917e05765ac7833be79e13a2513a56705a51351ece6b50ca87d68d WHIRLPOOL e188d79b0322cd6433529ef6d8d157cd09a96c36d6f8161412b2c41c07aabec047acda0e5b7ee8741ea4aa526824dd17e9c823072aeaf584fd6a6dd49e4d8bfd
 EBUILD gitlab-ce-8.14.5.ebuild 12058 SHA256 ef48879ad31e34e3b451ed39d1a196c1ae37b53296b39fb2f5d9c55f8cb04fc0 SHA512 24b314b35b24712471bf0f9e887a3c8cd434be2d5231f270ea0ef5f4d59377b2ba1049bf3ee7bf5feb54f77bd1d9d4121409640bd562a3a871c6bef1e7a80f45 WHIRLPOOL 7fef550d27617de2176b0f3fadb4575ad15f09e3bc204a82ea0b62c97497d36c1e0154fd18b483ac678ff7b5f8ecb464161a132ecf250bad839f28dd721e5100
+EBUILD gitlab-ce-8.15.0_rc1.ebuild 12035 SHA256 5df513f9cd7d32f7d6435696c39fa0ac920bd0785c913702e7a323257adc5b71 SHA512 7822d3bee4218aa04ddd3e37d6828bb2430e344f91111137e954cad239d3b0133cae05461af048f902e2de516ba76e9b5b9dfbe91f6cd7500a92b9ff944a7304 WHIRLPOOL 794e7235b9ec5d493251f94df9e183421873a04e90d9f0ee76e2ea5820c830ee72084887d6c6f2b101c58df18f1b6ded97aad5711d6ac75278ed4d62c9701af5
 EBUILD gitlab-ce-9999.ebuild 11913 SHA256 f6e02b9e122033339874bce07dd4b1663a8b3dee9ad86e5793a9dbf7517e78b6 SHA512 43943fc250c810f131bdcfef518373b12bb997b84c12d5ee50b3006ddc9a7df4541a08faf2ea35dcd56ad70a7fd3d5dfc17c529b30df99c426d6418c3e5ee051 WHIRLPOOL ff7cf1a2a82545f16e2c7804ace0a8b2d00acab24233afe293668ab7573131065e1b301979d87563dd235a9fb4bebd3156aa9bddcb547cfb1b837103273686f5
-MISC ChangeLog 11872 SHA256 e3961c7f38df3ee9a6a040eb266a204ed50d4174316a78c3abf5a66caeb3dabb SHA512 22b3a2bee58a2f469093b23b85cfc6b460720574b038c2be78c4d4d1356b1a1165bb5d9746e72e9862a83f760dd93b7c128cb7600c57697f15ae78c79cce3baa WHIRLPOOL fcd692553c4174dc605679c74b282787e650386b1c2fe4fabb11e821e7f1c06afe8e99cdb50b173526c95c254a48dbb58583a85972767634a4f3920846be8d2b
+MISC ChangeLog 12134 SHA256 d90c37dd130c4d65cf1fbcf7cc3202e4c0cdc277e8c93f6f504af75cf8569cc0 SHA512 ed221d43270e2f4c3069b796445bf871c7dd6e1def0227be148667410efa0ec3ae122d89a00437520982116ca56daf3ab6f494026ac2ebf8d511c50e97e69f03 WHIRLPOOL e11b0465d4755686d2e1e1136b0f4d3e542a801fb5b2667937cb63f3493e5dfb825603090988b580d55fd5d0448d408836bbc5e878c5b844a26a1f16ec252605
 MISC metadata.xml 559 SHA256 6c3f48d3ef57c97bf27790f33ee04bd8de8b01597caa8a2a7a473d6d0a3c5759 SHA512 5aa340b5429795d84cd106ee673fd55a42fd4b0d3299d6b95c6a3e3d50812a9620820a4de5c57d5048af0c3ecec7f575d5856d2f7fadc210aadcbdd4dd040fe1 WHIRLPOOL f3d7b8c0522e09f5156e6bb446bb74e4c75f5da4495ca2ece1eb78afce59307abe01bf3c5dd5344278fcac9e334300d912031c806f51b981591c01bc3588c6f3
